--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
+layout: splash
+title: "Welcome"
+permalink: /
+header:
+  overlay_color: "#5e616c"
+  overlay_image: /assets/images/header.jpg
+  actions:
+    - label: "Download CV"
+      url: "/assets/pdfs/Yutong%20Wang_CV.pdf"
+excerpt: "PhD student in Theoretical and Applied Linguistics, University of Cambridge"
 ---
+
+Welcome to my academic website. I'm a PhD student in the Phonetics and Phonology Lab at the University of Cambridge. My research focuses on acoustic phonetics, incomplete contrast neutralisation, and the phonetics-phonology interface in Mandarin Chinese.
+
+Explore the site to learn more about my research, teaching, and academic background.
