--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@ header:
   overlay_color: "#5e616c"
   overlay_image: /assets/images/header.jpg
   actions:
-    - label: "Download CV"
+    - label: "About Me"
       url: "/assets/pdfs/Yutong%20Wang_CV.pdf"
-excerpt: "PhD student in Theoretical and Applied Linguistics, University of Cambridge"
+excerpt: "Yutong (Felicia) Wang, PhD student in Theoretical and Applied Linguistics, University of Cambridge"
 ---
 
-Welcome to my academic website. I'm a PhD student in the Phonetics and Phonology Lab at the University of Cambridge. My research focuses on acoustic phonetics, incomplete contrast neutralisation, and the phonetics-phonology interface in Mandarin Chinese.
-
-Explore the site to learn more about my research, teaching, and academic background.
+Welcome to my academic website. Explore the site to learn more about my research, teaching, and academic background.
