--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   overlay_image: /assets/images/header.jpg
   actions:
     - label: "About Me"
-      url: "/assets/pdfs/Yutong%20Wang_CV.pdf"
+      url: /about/
 excerpt: "Yutong (Felicia) Wang, PhD student in Theoretical and Applied Linguistics, University of Cambridge"
 ---
 
