--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: splash
 title: "Welcome"
 permalink: /
 header:
-  overlay_color: "#5e616c"
+  overlay_color: "#688F4E"
   overlay_image: /assets/images/header.jpg
   actions:
     - label: "About Me"
