--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ header:
   actions:
     - label: "About Me"
       url: /about/
-excerpt: "Yutong (Felicia) Wang, PhD student in Theoretical and Applied Linguistics, University of Cambridge"
+excerpt: "Yutong (Felicia) Wang <br>PhD student in Theoretical and Applied Linguistics  <br>Phonetics and Phonology Laboratory <br>University of Cambridge"
 ---
 
 Welcome to my academic website. Explore the site to learn more about my research, teaching, and academic background.
