--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@ header:
       url: /about/
 excerpt: "Yutong (Felicia) Wang <br>PhD student in Theoretical and Applied Linguistics  <br>Phonetics and Phonology Laboratory <br>University of Cambridge"
 ---
-
 Welcome to my academic website. Explore the site to learn more about my research, teaching, and academic background.
+
+<div style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 2rem; margin-top: 2rem;">
+
+  <div style="flex: 1 1 300px;">
+    <p>My research focuses on phonetics, the phonetics-phonology interface, and sound contrasts in typologically diverse languages.</p>
+    <p>I'm especially interested in incomplete neutralisation, speech variability, and the acoustic cues behind them.</p>
+  </div>
+
+  <div style="flex: 1 1 250px; text-align: center;">
+    <img src="/assets/images/cho-mee.jpg" alt="Cho-Mee the cat" style="max-width: 100%; border-radius: 12px;">
+    <figcaption><small>Cho-Mee, honorary RA</small></figcaption>
+  </div>
+
+</div>
