--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@ header:
   actions:
     - label: "About Me"
       url: /about/
-excerpt: "Yutong (Felicia) Wang <br>PhD student in Theoretical and Applied Linguistics  <br>Phonetics and Phonology Laboratory <br>University of Cambridge"
+excerpt: |
+  <div style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap;">
+    <div style="flex: 1; min-width: 280px;">
+      <p style="font-size: 1.25rem; margin: 0;">
+        Yutong (Felicia) Wang <br>
+        PhD student in Theoretical and Applied Linguistics <br>
+        Phonetics and Phonology Laboratory <br>
+        University of Cambridge
+      </p>
+    </div>
+    <div style="flex: 0 0 auto; margin-left: 2rem;">
+      <img src="/assets/images/cho-mee.jpg" alt="Cho-Mee the cat" style="max-height: 160px; border-radius: 12px;">
+      <div style="font-size: 0.8rem; text-align: center;">Cho-Mee, honorary RA</div>
+    </div>
+  </div>
 ---
 Welcome to my academic website. Explore the site to learn more about my research, teaching, and academic background.
-
-<div style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 2rem; margin-top: 2rem;">
-
-  <div style="flex: 1 1 300px;">
-    <p>My research focuses on phonetics, the phonetics-phonology interface, and sound contrasts in typologically diverse languages.</p>
-    <p>I'm especially interested in incomplete neutralisation, speech variability, and the acoustic cues behind them.</p>
-  </div>
-
-  <div style="flex: 1 1 250px; text-align: center;">
-    <img src="/assets/images/cho-mee.jpg" alt="Cho-Mee the cat" style="max-width: 100%; border-radius: 12px;">
-    <figcaption><small>Cho-Mee, honorary RA</small></figcaption>
-  </div>
-
-</div>
