--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ excerpt: |
       </p>
     </div>
     <div style="flex: 0 0 auto; margin-left: 2rem;">
-      <img src="/assets/images/cho-mee.jpg" alt="Cho-Mee the cat" style="max-height: 160px; border-radius: 12px;">
-      <div style="font-size: 0.8rem; text-align: center;">Cho-Mee, honorary RA</div>
+      <img src="/assets/images/index.jpg" alt="trinitylane" style="max-height: 400px; border-radius: 12px;">
+      <div style="font-size: 0.8rem; text-align: center;">Trinitiy Lane, Cambridge, Feburary 2024</div>
     </div>
   </div>
 ---
