--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: splash
 title: "Welcome"
 permalink: /
 header:
-  overlay_color: "#688F4E"
+  overlay_color: "#173564"
   overlay_image: /assets/images/header.jpg
   actions:
     - label: "About Me"
@@ -20,7 +20,7 @@ excerpt: |
     </div>
     <div style="flex: 0 0 auto; margin-left: 2rem;">
       <img src="/assets/images/index.jpg" alt="trinitylane" style="max-height: 350px; border-radius: 5px;">
-      <div style="font-size: 0.8rem; text-align: center;">Trinitiy Lane, Cambridge, Feburary 2024</div>
+      <div style="font-size: 0.8rem; text-align: center;">Trinitiy Lane, Cambridge, February 2024</div>
     </div>
   </div>
 ---
