--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ header:
     - label: "About Me"
       url: /about/
 excerpt: |
-  <div style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap;">
+  <div style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; color: #ffffff;">
     <div style="flex: 1; min-width: 280px;">
       <p style="font-size: 1.25rem; margin: 0;">
         Yutong (Felicia) Wang <br>
@@ -18,7 +18,7 @@ excerpt: |
         University of Cambridge
       </p>
     </div>
-    <div style="flex: 0 0 auto; margin-left: 2rem;">
+    <div style="flex: 0 0 auto; margin-left: 2rem; color: #ffffff;">
       <img src="/assets/images/index.jpg" alt="trinitylane" style="max-height: 350px; border-radius: 5px;">
       <div style="font-size: 0.8rem; text-align: center;">Trinitiy Lane, Cambridge, February 2024</div>
     </div>
